Fix utoipa schema wrapper struct
